# rabbitmq_communicator

./: LICENSE  README.md  pyproject.toml
rabbitmq_communicator/: communicator.py  decorators.py  message_processor.py
tests/: test_communicator.py
